Fix emote URLs, strip hitbox inline images and actually build the module.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-parser",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Parse chat from streaming platforms into a a single format.",
   "main": "compiled/index.js",
   "directories": {
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "prepublish": "tsc index.ts --outDir compiled/",
+    "build": "tsc index.ts --outDir compiled/",
     "test": "mocha --require ts-node/register --watch-extensions tsx,ts test/*.ts",
     "cover": "nyc --require ts-node/register --reporter=lcov --reporter=text-lcov npm test | coveralls"
   },
