--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "coveralls": "^2.11.15",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
-    "nyc": "^10.0.0",
+    "nyc": "^10.0.0"
   },
   "scripts": {
     "prepublish": "tsc index.ts --outDir compiled/",
