Bundle compiled assets in NPM

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "chat-parser",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "Parse chat from streaming platforms into a a single format.",
   "main": "compiled/index.js",
+  "typings": "compiled/index",
   "directories": {
     "example": "examples"
   },
@@ -20,8 +21,8 @@
     "nyc": "^10.0.0"
   },
   "scripts": {
-    "prepublish": "tsc index.ts --outDir compiled/",
-    "postinstall": "tsc index.ts --outDir compiled/",
+    "build": "tsc index.ts --outDir compiled/",
+    "failinstall": "tsc index.ts --outDir compiled/",
     "test": "mocha --require ts-node/register --watch-extensions tsx,ts test/*.ts",
     "cover": "nyc --require ts-node/register --reporter=lcov --reporter=text-lcov npm test | coveralls"
   },
