--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,10 @@
         "outDir": "dist"
     },
         "exclude": [
+            "node_modules",
             "dist",
-            "build"
+            "build",
+            "test",
+            "examples"
         ]
     }
