--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mocha": "^2.2.48",
     "@types/node": "^8.9.1",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "mocha": "^5.0.0",
     "nyc": "^11.4.1",
     "rimraf": "^2.6.2"
