--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
             "node_modules",
             "dist",
             "build",
-            "test",
+            "tests",
             "examples"
         ]
     }
